--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "4.5.2",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.1.6",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "@vercel/analytics": "^0.1.8",
@@ -34,6 +38,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
